Closed Bug 1247671 Opened 10 years ago Closed 10 years ago

Increase the logging length for graphics critical errors

Categories

(Core :: Graphics, defect)

Unspecified
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: milan, Assigned: milan)

Details

(Keywords: feature)

Attachments

(1 file)

We currently save 6. There are scenarios where this is not enough, in some cases we try (and report trying) to reaquire the device 10 times - that cleans out all the previous messages. Either way, the messages are not long, we can afford to show more.
Assignee: nobody → milan
Comment on attachment 8718412 [details] MozReview Request: Bug 1247671: Increase the crash logging length to 16 by default (+ small white space change in the comments) r?dvander https://reviewboard.mozilla.org/r/34559/#review31271
Attachment #8718412 - Flags: review?(dvander) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: