Bug 1247671: Increase the crash logging length to 16 by default (+ small white space change in the comments) r=dvander

MozReview-Commit-ID: 9KH6ZdWInZM

--HG--
extra : rebase_source : 62d608c0fd859586a129d9663b92aa634bca1c7d